--- a/New/index.html
+++ b/New/index.html
@@ -6,16 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    
 </head>
 <body>
- <ul>
-    <li>item 1</li>
-    <li>item 2</li>
-    <li>item 3</li>
-    <li>item 4</li>
-    <li>item 5</li>
- </ul>
+
+    <table> 
+<caption></caption>
+<thead>
+    <tr>Quastionnaire Result</tr>
+    
+</thead>
+<tbody>
+    <td rowspan="2">Question</td>
+    <td colspan="2">Woman</td>
+    <td colspan="2">Man</td>
+    <tr>
+        <td>Yes</td>
+        <td>No</td>
+        <td>Yes</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <td>Question 1</td>
+        <td>42%</td>
+        <td>58%</td>
+        <td>61%</td>
+        <td>39%</td>
+
+    </tr>
+    <tr>
+        <td>Question 2</td>
+        <td>53%</td>
+        <td>47%</td>
+        <td>69%</td>
+        <td>31%</td>
+    </tr>
+    <tr>
+        <td>Question 3</td>
+        <td>26%</td>
+        <td>74%</td>
+        <td>51%</td>
+        <td>49%</td>
+    </tr>
+    <tr>
+        <td>Average</td>
+        <td>40%</td>
+        <td>60%</td>
+        <td>60%</td>
+        <td>40%</td>
+    </tr>
+  
+   
+</tbody>
+<tfoot></tfoot>
+
+    </table>
 
  
 
