--- a/New/CV/CV.html
+++ b/New/CV/CV.html
@@ -13,15 +13,17 @@
         <h1>Єжель Максим</h1>
         <h2>HTML/CSS Developer</h2>
      </header>
+     <hr></hr>
      <section>
         <h3>Особові данні</h3>
         <ul>
-            <li>ПІБ - <q>Єжель Максим Олексаднрович</q></li>
-            <li>Вік - <q>26</q></li>
-            <li>Місто - <q>Київ</q></li>
-            <li>Номер телефону -<q>0990105602</q></li>
-            <li>Email - <q>maxyeghel@gmail.com</q></li>
+            <li>ПІБ - Єжель Максим Олексаднрович</li>
+            <li>Вік - 26</li>
+            <li>Місто - Київ</li>
+            <li>Номер телефону - 0990105602</li>
+            <li>Email - maxyeghel@gmail.com</li>
         </ul>
+        <hr></hr>
 
     </section>
 
@@ -35,14 +37,17 @@
     </section>
 
      </section>
+     <hr></hr>
 
      <section>
         <h3>Основні навички</h3>
         <ul>
-            <li><q>HTML5</q></li>
-            <li><q>CSS</q></li>
-            <li><q>Git</q></li>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>Git</li>
         </ul>
+        <hr></hr>
+
 
      </section>
 </body>
